--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/cli": "^11.0.7",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -36,8 +37,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.4",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "@nestjs/cli": "^11.0.7"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
