--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "auth-service",
+  "name": "zywy-rozaniec-dzieci",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "mk-sdev",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -26,7 +26,6 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
-    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
@@ -34,10 +33,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
-    "mongoose": "^8.16.1",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
-    "nodemailer": "^7.0.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.25"
@@ -54,7 +51,6 @@
     "@types/jest": "^29.5.14",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
-    "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
