--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
-    "argon2": "^0.43.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
@@ -41,6 +40,9 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.25"
+  },
+  "optionalDependencies": {
+    "argon2": "^0.43.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
