--- a/package.json
+++ b/package.json
@@ -39,10 +39,9 @@
     "mysql2": "^3.14.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.25"
-  },
-  "optionalDependencies": {
-    "argon2": "^0.43.0"
+    "typeorm": "^0.3.25",
+    "argon2": "^0.27.0",
+    "node-gyp-build": "^4.8.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
