--- a/package.json
+++ b/package.json
@@ -32,16 +32,16 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
+    "argon2": "^0.27.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "multer": "^2.0.2",
-    "mysql2": "^3.14.3",
+    "node-gyp-build": "^4.8.4",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.25",
-    "argon2": "^0.27.0",
-    "node-gyp-build": "^4.8.4"
+    "typeorm": "^0.3.25"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
